samples/_failures_safe/1761294460_acd769_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5125f824.c: In function ‘main’:
./samples/SAFE/__tmp_5125f824.c:169:19: error: expected ‘)’ at end of input
  169 |     free_matrix(&a
      |                ~  ^
      |                   )
./samples/SAFE/__tmp_5125f824.c:169:5: error: expected declaration or statement at end of input
  169 |     free_matrix(&a
      |     ^~~~~~~~~~~
